--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# IDE
+.vscode
+
+# CMake files
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+DartConfiguration.tcl
+
 # Compiled Object files
 *.slo
 *.lo
